--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Furniture Emporium</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <main>
@@ -20,7 +21,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$20.00 <s>$25.00</s></p>
+        <p class="new-price">$20.00 <s class="old-price">$25.00</s></p>
         <button>Add to cart</button>
       </article>
       <article>
@@ -31,7 +32,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$49.95 <s>$60.00</s></p>
+        <p class="new-price">$49.95<s class="old-price">$60.00</s></p>
         <button>Add to cart</button>
       </article>
       <article>
@@ -42,7 +43,7 @@
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$18.99 <s>$32.99</s></p>
+        <p class="new-price">$18.99 <s class="old-price">$32.99</s></p>
         <button>Add to cart</button>
       </article>
     </main>
